<resources>
    <string name="app_name">WhatsApp2.0</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up_with_phone">Sign Up With Phone</string>
    <string name="signin_email">Email</string>
    <string name="sign_in_password">Password</string>
    <string name="click_to_sign_up">Click To Sign Up</string>
    <string name="sing_in">Sing In</string>
    <string name="sign_up_with_phone_2">Sign Up With Phone</string>
</resources>