<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:orientation="vertical"
    android:background="@drawable/w1"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_whatsapp"
            />
        <EditText
            android:id="@+id/txtusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="9dp"
            android:textColor="@color/lightGrey"
            android:textColorHint="@color/chatbackground"
            />

        <EditText
            android:id="@+id/txtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="9dp"
            android:hint="@string/email"
            android:textColor="@color/lightGrey"
            android:textColorHint="@color/chatbackground"
            />

        <EditText
            android:id="@+id/txtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:ems="10"
            android:padding="9dp"
            android:textColor="@color/lightGrey"
            android:textColorHint="@color/chatbackground"
            />

        <TextView
            android:id="@+id/txt_already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="Already Have Account?"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:padding="5dp"
            android:gravity="right"
            android:textStyle="bold"

            />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            app:backgroundTint="@color/design_default_color_secondary_variant"
            app:cornerRadius="8dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/btn_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/google"
                android:textAllCaps="false"
                android:drawableLeft="@drawable/ic_google"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                app:cornerRadius="8dp"
                />
            <Button
                android:id="@+id/btn_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:padding="15dp"
                android:layout_weight="1"
                android:text="@string/facebook"
                android:textAllCaps="false"
                android:drawableLeft="@drawable/ic_facebook"
                android:backgroundTint="@color/fb_color"
                android:textColor="@color/black"
                app:cornerRadius="8dp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/sign_up_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/sign_up_with_phone"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="19sp"
            />

    </LinearLayout>

</LinearLayout>